complete Reserve layout v3

--- a/app/src/main/res/layout/activity_reserve_snack.xml
+++ b/app/src/main/res/layout/activity_reserve_snack.xml
@@ -10,6 +10,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="Avaliable Items"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
