Admin Panel Done

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -98,7 +98,7 @@
                     android:layout_height="wrap_content">
 
                     <ImageButton
-                        android:id="@+id/GrabSnackImageButton"
+                        android:id="@+id/UserDataImageButton"
                         android:layout_width="157dp"
                         android:layout_height="100dp"
                         android:layout_marginTop="5dp"
@@ -123,7 +123,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/GrabSnackImageButton" />
+                        app:layout_constraintTop_toBottomOf="@+id/UserDataImageButton" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
@@ -142,7 +142,7 @@
                     android:layout_height="wrap_content">
 
                     <ImageButton
-                        android:id="@+id/AddSnacksImageButton"
+                        android:id="@+id/ReplenishsImageButton"
                         android:layout_width="120dp"
                         android:layout_height="100dp"
                         android:layout_marginStart="24dp"
@@ -170,7 +170,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/AddSnacksImageButton" />
+                        app:layout_constraintTop_toBottomOf="@+id/ReplenishsImageButton" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
