--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -220,7 +220,7 @@
                         android:layout_height="wrap_content">
 
                         <ImageButton
-                            android:id="@+id/GrabSnackImageButton"
+                            android:id="@+id/UserDataImageButton"
                             android:layout_width="157dp"
                             android:layout_height="100dp"
                             android:layout_marginTop="5dp"
@@ -245,7 +245,7 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/GrabSnackImageButton" />
+                            app:layout_constraintTop_toBottomOf="@+id/UserDataImageButton" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
@@ -264,7 +264,7 @@
                         android:layout_height="wrap_content">
 
                         <ImageButton
-                            android:id="@+id/AddSnacksImageButton"
+                            android:id="@+id/ReplenishImageButton"
                             android:layout_width="120dp"
                             android:layout_height="100dp"
                             android:layout_marginStart="24dp"
@@ -293,7 +293,7 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/AddSnacksImageButton" />
+                            app:layout_constraintTop_toBottomOf="@+id/ReplenishImageButton" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
@@ -327,7 +327,7 @@
                         android:layout_height="wrap_content">
 
                         <ImageButton
-                            android:id="@+id/FindSnacksImageButton"
+                            android:id="@+id/PermissionImageButton"
                             android:layout_width="118dp"
                             android:layout_height="105dp"
                             android:layout_marginStart="24dp"
@@ -352,7 +352,7 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.562"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/FindSnacksImageButton" />
+                            app:layout_constraintTop_toBottomOf="@+id/PermissionImageButton" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
