--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="check">#45A429</color>
+    <color name="deny">#CC253E</color>
 
     <color name="primary">#6A7CFF</color>
     <color name="background_admin">#F7F7FA</color>
