--- a/app/src/main/res/layout/activity_grab_check.xml
+++ b/app/src/main/res/layout/activity_grab_check.xml
@@ -36,10 +36,11 @@
         android:id="@+id/check_items_recyclerview"
         android:layout_width="0dp"
         android:layout_height="580dp"
-        android:layout_marginTop="48dp"
         android:layout_marginBottom="48dp"
         app:layout_constraintBottom_toTopOf="@+id/confirm_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintEnd_toEndOf="@id/textView3"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@id/textView3"
+        app:layout_constraintTop_toBottomOf="@id/textView3"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
