--- a/app/src/main/res/layout/activity_admin_history.xml
+++ b/app/src/main/res/layout/activity_admin_history.xml
@@ -6,4 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".AdminHistoryActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/HrecycleView"
+        android:layout_width="413dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="History"
+        android:textSize="48sp"
+        app:layout_constraintBottom_toTopOf="@+id/HrecycleView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
