--- a/app/src/main/res/layout/activity_grab_snack.xml
+++ b/app/src/main/res/layout/activity_grab_snack.xml
@@ -50,6 +50,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:text="Verify"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
