--- a/app/src/main/res/layout/activity_get_qrcode.xml
+++ b/app/src/main/res/layout/activity_get_qrcode.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/QRCode_imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
