--- a/app/src/main/res/layout/history_recycler_row.xml
+++ b/app/src/main/res/layout/history_recycler_row.xml
@@ -66,6 +66,16 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.508" />
 
+            <TextView
+                android:id="@+id/cnttv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cnt"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/itemtv"
+                app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
