--- a/app/src/main/res/layout/replenish_items.xml
+++ b/app/src/main/res/layout/replenish_items.xml
@@ -26,8 +26,8 @@
 
             <ImageView
                 android:id="@+id/replenish_items_imageView"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
@@ -92,10 +92,9 @@
                     app:cornerRadius="100dp" />
 
                 <TextView
-                    android:id="@+id/textView19"
-                    android:layout_width="50dp"
+                    android:id="@+id/replenish_count"
+                    android:layout_width="40dp"
                     android:layout_height="wrap_content"
-                    android:text="qnt"
                     android:textAlignment="center"
                     android:textSize="25dp" />
 
@@ -116,9 +115,10 @@
                 android:id="@+id/replenish_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:text="Reserve"
+                android:layout_marginLeft="12dp"
                 android:backgroundTint="#00C3AF"
+                android:text="Replenish"
+                android:textAlignment="center"
                 app:cornerRadius="100dp" />
 
         </LinearLayout>
