--- a/app/src/main/res/layout/replenish_items.xml
+++ b/app/src/main/res/layout/replenish_items.xml
@@ -51,7 +51,8 @@
                     android:id="@+id/replenish_items_textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:text=""
+                    android:textSize="20sp" />
             </LinearLayout>
 
             <LinearLayout
